--- a/css/style.css
+++ b/css/style.css
@@ -4,74 +4,112 @@ head {
 }
 
 body {
-	display: inline;
-	font: 14px/1.5 'Bitter', serif;
-	background-color: rgb(240,240,240);
-	/*background-color: #FFFFCC;*/
-	color: #484848;
+   display: inline;
+   font: 14px/1.5 'Bitter', serif;
+   background-color: rgb(240,240,240);
+   /*background-color: #FFFFCC;*/
+   color: #484848;
 
 }
 
 a{
-	font-size: 16px;
-	text-decoration: none;
-	display: inline;
-	font-weight: bold;
-	color:#FF9900;
-	/*color:#990066;*/
+   font-size: 16px;
+   text-decoration: none;
+   display: inline;
+   font-weight: bold;
+   color:#FF9900;
+   /*color:#990066;*/
 }
 
 img {
-	-webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -khtml-border-radius: 20px;  
-    border-radius: 20px;
-	overflow: hidden;
-	display: inline;
-	text-align: center;
-	border: 2px solid #FF9900;
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   -khtml-border-radius: 20px;  
+   border-radius: 20px;
+   overflow: hidden;
+   display: inline;
+   text-align: center;
+   border: 2px solid #FF9900;
 }
 
 .picturelinks {
-	font-size: 20px;
-	margin-top: 20px;
+   font-size: 20px;
+   margin-top: 20px;
 }
 
 .picturelinks a {
-	color: #FF9900;
-	font-size: 20px;
-	display: inline-block;
-	margin: 0 10px;
+   color: #FF9900;
+   font-size: 20px;
+   display: inline-block;
+   margin: 0 10px;
 }
 
 .container {
-	-webkit-border-radius: 20px;
+   -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -khtml-border-radius: 20px;  
     border-radius: 20px;
-	overflow: hidden;
-	padding: 25px;
-	max-width: 600px;
-	margin: 20px auto;
-	text-align: center;
-	background-color: rgba(255, 255, 255, 0.5);
+   overflow: hidden;
+   padding: 20px;
+   max-width: 600px;
+   margin: 2px auto;
+   text-align: center;
+   background-color: rgba(255, 255, 255, 0.5);
 }
 
 .opener {
-	font-size: 18px;
-	margin: 20px auto;
-	text-align: center;
-	max-width: 800px;
+   font-size: 18px;
+   margin: 20px auto;
+   text-align: center;
+   max-width: 800px;
 }
 
 h1 {
-	font-size: 20px;
-	display: inline;
-	color: #FF9900;
+   font-size: 20px;
+   display: inline;
+   color: #FF9900;
 }
 
 span.inline {
-	font-size: 16px;
-	color: #FF9900;
-	font-weight: bold;
+   font-size: 16px;
+   color: #FF9900;
+   font-weight: bold;
+}
+
+.container.index{
+   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+   -moz-animation: fadein 2s; /* Firefox < 16 */
+   -ms-animation: fadein 2s; /* Internet Explorer */
+   -o-animation: fadein 2s; /* Opera < 12.1 */
+   animation: fadein 2s;
+}
+
+
+@keyframes fadein {
+   from { opacity: 0; }
+   to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+   from { opacity: 0; }
+   to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+   from { opacity: 0; }
+   to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+   from { opacity: 0; }
+   to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
