--- a/css/style.css
+++ b/css/style.css
@@ -57,11 +57,42 @@ img {
    background-color: rgba(255, 255, 255, 0.5);
 }
 
+.appSection{
+   margin-top: 10px;
+   margin-bottom: 10px;
+   border-top: 2px solid rgb(240,240,240);
+   border-bottom: 2px solid rgb(240,240,240); 
+}
+
 .opener {
    font-size: 18px;
    margin: 20px auto;
    text-align: center;
    max-width: 800px;
+}
+
+/* pebble app page*/
+.container.apps {
+   max-width: 800px
+}
+
+.opener.naviagte{
+
+}
+
+.pebble{
+   float:left;
+   display: block;
+   margin: 10px;
+
+}
+.details{
+   text-align: left;
+   margin: 5px;
+}
+
+.titleIcon{
+   font-size: 20px;
 }
 
 h1 {
@@ -70,11 +101,21 @@ h1 {
    color: #FF9900;
 }
 
+.head{
+   display:block;
+}
+
+h2{
+
+}
+
 span.inline {
    font-size: 16px;
    color: #FF9900;
    font-weight: bold;
 }
+
+
 
 .container.index{
    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
